# angular-bootcamp

./: README.md
ai-job-hunter/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
ai-job-hunter/backend/alembic/: env.py  script.py.mako
ai-job-hunter/backend/alembic/versions/: 4cd6b23641fb_initial_schema.py  5aabed90b684_initial_schema.py
ai-job-hunter/backend/app/: __init__.py  main.py
ai-job-hunter/backend/app/api/v1/: router.py
ai-job-hunter/backend/app/api/v1/endpoints/: analytics.py  applications.py  auth.py  jobs.py  users.py  (+5 more)
ai-job-hunter/backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
ai-job-hunter/backend/app/database/: base.py  mixins.py  session.py
ai-job-hunter/backend/app/models/: __init__.py  application.py  job.py  notification.py  profile.py  provider.py  resume.py  search.py  settings.py  skill.py  user.py
ai-job-hunter/backend/app/providers/: __init__.py  adzuna.py  arbeitnow.py  base.py  registry.py  themuse.py  utils.py  weworkremotely.py
ai-job-hunter/backend/app/repositories/: base_repository.py  job_repository.py  profile_repository.py  user_repository.py
ai-job-hunter/backend/app/scheduler/: __init__.py  runtime.py
ai-job-hunter/backend/app/schemas/: job.py  profile.py  resume.py  settings.py  user.py
ai-job-hunter/backend/app/services/: auth_service.py  job_ingestion_service.py  job_service.py  matching_service.py  notification_service.py  profile_service.py
ai-job-hunter/backend/app/tests/: conftest.py  test_auth.py  test_health.py  test_jobs.py  test_profile.py
(+56 files in other folders)
